# inox2d-wgpu

./: .gitignore  README.md
.github/workflows/: web-demo.yml
examples/render-webgpu/: .gitignore  Cargo.toml  Readme.md  index.html
examples/render-webgpu/src/: main.rs
inox2d-wgpu/: Cargo.toml
inox2d-wgpu/src/: buffers.rs  cmd.rs  composite.wgsl  lib.rs  pipeline.rs  renderer.rs  shader.wgsl  texture.rs  uniforms.rs  vertex.rs
