[package]
name = "inox2d-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
inox2d = { path = "../inox2d", version = "0.3.0" }
wgpu = { version = "28.0.0", features = ["vulkan", "dx12"] }
glam = "0.29.0"
bytemuck = { version = "1.16", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
memoffset = "0.9"
winit = "0.29"

[dev-dependencies]
pollster = "0.3"
clap = { version = "4.1.8", features = ["derive"] }
