[package]
name = "render-webgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
inox2d = { path = "../../inox2d" }
inox2d-wgpu = { path = "../../inox2d-wgpu" }
wgpu = "28.0.0"
glam = "0.29.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
reqwest = "0.12.7"
tracing = "0.1.37"
tracing-wasm = "0.2.1"
console_error_panic_hook = "0.1"
winit = "0.29"

[dependencies.web-sys]
version = "0.3.61"
features = [
    "Window",
    "Location",
    "Navigator",
    "Element",
    "HtmlElement",
    "Document",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.0.0"